--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.0",
   "dependencies": {},
   "devDependencies": {
+    "@unumux/eslint-config-unumux": "^1.0.1",
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "^6.3.13",
+    "eslint": "^1.10.3",
     "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^2.2.0",
-    "grunt-babel": "^5.0.0",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-babel": "^6.0.0",
     "grunt-browser-sync": "^2.0.0",
     "grunt-captain-hook": "^0.3.1",
-    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
     "load-grunt-tasks": "^3.1.0"
