--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {},
   "devDependencies": {
     "@unumux/eslint-config-unumux": "^1.0.1",
+    "@unumux/stylelint-config-unumux": "^1.0.0",
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
     "eslint": "^1.10.3",
@@ -18,6 +19,7 @@
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
-    "load-grunt-tasks": "^3.1.0"
+    "load-grunt-tasks": "^3.1.0",
+    "stylelint": "^4.2.0"
   }
 }
